Implemented DBContext Injected context to controller

--- a/EmployeeWebApp/EmployeeWebApp.csproj
+++ b/EmployeeWebApp/EmployeeWebApp.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAcessLayer\DataAcessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
